workloads/homepage/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: homepage
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: homepage
  ports:
    - name: http
      port: 3000
      targetPort: 3000
